<resources>
    <string name="app_name">Pasti Cuan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
</resources>